unpackaged/main/default/objects/pse__Expense__c/fields/Deferred_Expenses_to_be_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Expenses_to_be_Recognized__c</fullName>
    <label>Deferred Expenses to be Recognized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>