unpackaged/main/default/objects/pse__Expense__c/fields/Oracle_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Invoice_Number__c</fullName>
    <formula>pse__Billing_Event_Item__r.Oracle_Invoice_Number__c</formula>
    <label>Oracle Invoice Number</label>
    <type>Text</type>
</CustomField>