unpackaged/main/default/objects/pse__Expense__c/fields/PS_Consulting_Region__c.field-meta.xml
<CustomField>
    <fullName>PS_Consulting_Region__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Project__r.pse__Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Select the Region within the Theater. Upon saving, Theater field automatically updates based on Region selected.</inlineHelpText>
    <label>PS Consulting Region</label>
    <type>Text</type>
</CustomField>