unpackaged/main/default/objects/pse__Expense__c/fields/PSA_Version__c.field-meta.xml
<CustomField>
    <fullName>PSA_Version__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Project__r.PSA_Version__c</formula>
    <label>PSA Version</label>
    <type>Text</type>
</CustomField>