unpackaged/main/default/objects/pse__Expense__c/fields/Revenue_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognized__c</fullName>
    <label>Revenue Recognized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Recognized</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Reject - Incorrect Expense Amount</fullName>
            </value>
            <value>
                <fullName>Reject - Future Dated</fullName>
            </value>
            <value>
                <fullName>Reject - Zero Revenue Available</fullName>
            </value>
            <value>
                <fullName>Reject - Order Not Invoiced</fullName>
            </value>
            <value>
                <fullName>Reject - Other (Please enter reason)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>