unpackaged/main/default/objects/pse__Expense__c/fields/Services_Product__c.field-meta.xml
<CustomField>
    <fullName>Services_Product__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Milestone__r.Product_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>