unpackaged/main/default/objects/pse__Expense__c/fields/Sold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sold_Amount__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Sold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>