unpackaged/main/default/objects/pse__Expense__c/fields/Sold_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sold_Rate__c</fullName>
    <label>Sold Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>