unpackaged/main/default/objects/pse__Expense__c/fields/Validated_by_PS__c.field-meta.xml
<CustomField>
    <fullName>Validated_by_PS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validated by PS</label>
    <type>Checkbox</type>
</CustomField>