unpackaged/main/default/objects/pse__Expense__c/validationRules/Non_Bill_Type_cannot_be_Billable.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Bill_Type_cannot_be_Billable</fullName>
    <active>true</active>
    <description>Prevents the picklist value of Non Billable on a billable expense</description>
    <errorConditionFormula>AND(ISPICKVAL(pse__Type__c, "Non-billable Expenses"),
        pse__Billable__c = TRUE)</errorConditionFormula>
    <errorDisplayField>pse__Billable__c</errorDisplayField>
    <errorMessage>An expense of the type Non-billable Expenses cannot be marked Billable.</errorMessage>
</ValidationRule>