unpackaged/main/default/objects/pse__Expense__c/listViews/All_Expenses.listView-meta.xml
<ListView>
    <fullName>All_Expenses</fullName>
    <columns>Sales_Order__c</columns>
    <columns>pse__Amount__c</columns>
    <columns>pse__Expense_Date__c</columns>
    <columns>pse__Expense_Report__c</columns>
    <columns>NAME</columns>
    <columns>pse__Assignment__c</columns>
    <columns>PS_Consulting_Region__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Expense_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2017</value>
    </filters>
    <label>All Billable Expenses</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Consulting_Mgmt_APAC</group>
        <group>PSA_Consulting_Mgmt_EMEA</group>
        <group>PSA_Consulting_Mgmt_JAPAN</group>
        <group>PSA_Project_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_APAC</group>
        <group>PSA_Project_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_JAPAN</group>
    </sharedTo>
</ListView>