unpackaged/main/default/objects/pse__Expense__c/listViews/AR_Expenses_to_be_Recognized.listView-meta.xml
<ListView>
    <fullName>AR_Expenses_to_be_Recognized</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6)</booleanFilter>
    <columns>Sales_Order__c</columns>
    <columns>pse__Expense_Date__c</columns>
    <columns>Deferred_Expenses_to_be_Recognized__c</columns>
    <columns>Revenue_Recognized__c</columns>
    <columns>Notes__c</columns>
    <columns>NAME</columns>
    <columns>PS_Consulting_Region__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>pse__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Send_to_AR__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
        <value>Resubmitted</value>
    </filters>
    <label>2. AR - Expenses to be Recognized</label>
    <sharedTo>
        <group>PSA_Revenue_Accounting_AR</group>
    </sharedTo>
</ListView>