unpackaged/main/default/objects/pse__Expense__c/listViews/PS_Expenses_to_be_Corrected.listView-meta.xml
<ListView>
    <fullName>PS_Expenses_to_be_Corrected</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6 OR 7 OR 8 OR 9)</booleanFilter>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>pse__Expense_Date__c</columns>
    <columns>Deferred_Expenses_to_be_Recognized__c</columns>
    <columns>Revenue_Recognized__c</columns>
    <columns>Notes__c</columns>
    <columns>PS_Consulting_Region__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Send_to_AR__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
        <value>Reject - Other (Please enter reason)</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
        <value>Reject - Order Not Invoiced</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
        <value>Reject - Zero Revenue Available</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
        <value>Reject - Future Dated</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
        <value>Reject - Incorrect Expense Amount</value>
    </filters>
    <label>Rejected Expenses (Rejected by AR) AMER</label>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_AMER</group>
    </sharedTo>
</ListView>