unpackaged/main/default/objects/pse__Expense__c/listViews/PS_Expenses_to_be_Sent_to_AR.listView-meta.xml
<ListView>
    <fullName>PS_Expenses_to_be_Sent_to_AR</fullName>
    <columns>Send_to_AR__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>pse__Expense_Date__c</columns>
    <columns>Deferred_Expenses_to_be_Recognized__c</columns>
    <columns>PS_Consulting_Region__c</columns>
    <columns>Owner__c</columns>
    <columns>pse__Expense_Report__c</columns>
    <columns>pse__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Revenue_Recognized__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Send_to_AR__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>1. Approved Expenses (AR)</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Consulting_Mgmt_APAC</group>
        <group>PSA_Consulting_Mgmt_EMEA</group>
        <group>PSA_Consulting_Mgmt_JAPAN</group>
        <group>PSA_Project_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_APAC</group>
        <group>PSA_Project_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_JAPAN</group>
    </sharedTo>
</ListView>